node/be/overlays/local/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-playground-be
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: devops-playground-be
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 256Mi
