node/be/overlays/local/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-playground-postgres
  labels:
    app: devops-playground-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-playground-postgres
  template:
    metadata:
      labels:
        app: devops-playground-postgres
    spec:
      containers:
        - name: devops-playground-postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: devops-playground-postgres-service
  labels:
    app: devops-playground-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: devops-playground-postgres
